Fix dropdown right alignment

--- a/controls/dropdown.scss
+++ b/controls/dropdown.scss
@@ -77,7 +77,8 @@
   margin-left: -0.8em;
 
   &.align-right {
-    right: -0.2em
+    right: -0.2em;
+    left: auto !important;
   }
 
   > ul {
